syntax = "proto3";

option java_package = "ru.cvhub.authservice.grpc";
option java_outer_classname = "AS";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (TokenResponse);

  rpc Login (LoginRequest) returns (TokenResponse);

  rpc RefreshToken (RefreshTokenRequest) returns (TokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}